changed JobType location refs & linting & minor refactoring
