# sms_api/analysis/models.py
@@ -6,7 +6,7 @@ from typing import Any, ParamSpec, TypeVar
 from pydantic import BaseModel, ConfigDict, Field
 
 from sms_api.common import StrEnumBase
-from sms_api.common.models import DataId
+from sms_api.common.models import DataId, JobStatus
 from sms_api.config import Settings, get_settings
 
 MAX_ANALYSIS_CPUS = 3
@@ -218,14 +218,6 @@ class ExperimentAnalysisDTO(BaseModel):
     last_updated: str
     job_name: str | None = None
     job_id: int | None = None
-
-
-class JobStatus(StrEnumBase):
-    WAITING = "waiting"
-    QUEUED = "queued"
-    RUNNING = "running"
-    COMPLETED = "completed"
-    FAILED = "failed"
 
 
 class AnalysisRun(BaseModel):
